[workspace]
resolver = "2"
members = [
  "example/users_web",
  "ketzal",
  "ketzal-http",
  "ketzal-router", "ketzal-templates",
  "ketzal-validation",

]
[workspace.package]
edition = "2021"
license-file = "LICENSE"
authors = ["Hector3269 <danielramirezr27@gmail.com>"]
homepage = "https://github.com/Hector3269/ketzal"
repository = "https://github.com/Hector3269/ketzal"
description = "Ketzal web framework and HTTP core"

[profile.dev]
debug = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
