[package]
name = "ketzal-http"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
ketzal-validation = { version = "0.1.0", path = "../ketzal-validation" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"
urlencoding = "2"

http = "1"
bytes = "1"
thiserror = "2"
tracing = "0.1"

tokio = { version = "1", features = ["io-util"], optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
